--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -42,12 +42,11 @@
     margin-top: 2%;
     border-radius: 200px;
     box-shadow: 0 0 10px 2px var(--headerColor);
-    /* box-shadow: 0 1px 10px 1px black; */
     background-color: var(--navbarColor);
-
-    & a {
-        color: var(--bodyColor);
-    }
+    
+}
+.list-of-hotels a {
+    color: var(--bodyColor);
 }
 
 .list-of-hotels .container {
@@ -93,34 +92,30 @@
     border-radius: 20px 0 20px 0;
 }
 
-.areas-container {
-    & img {
+    .areas-container img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         transition: .5s;
     }
 
-    & img:hover {
+    .areas-container img:hover {
         transform: scale(1.05);
     }
-}
 
-.list-of-hotels {
-    & h3 {
+.list-of-hotels  h3 {
         text-align: center;
         margin: 0;
         padding: 0;
     }
-}
 
 .service-information {
     width: 100%;
     height: 100px;
     background-color: var(--navbarColor);
-    padding: 0 5%;
+    padding: 0 5%;}
 
-    & .service-info-row {
+    .service-information .service-info-row {
         width: 100%;
         height: 100%;
         display: flex;
@@ -129,7 +124,7 @@
         align-items: center;
     }
 
-    & p {
+    .service-information p {
         margin: 0;
         padding: 0;
     }
@@ -141,13 +136,12 @@
         color: var(--textColor);
     }
 
-    & .service-info-col-icon {
+    .service-information .service-info-col-icon {
         width: 50px;
         height: 50px;
     }
 
 
-}
 
 footer {
     border-top: 1px solid black;
@@ -155,53 +149,47 @@ footer {
     height: auto;
     padding: 2% 3%;
     background-color: var(--navbarColor);
-
-    & .footer-row {
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-
-    }
-
-    & .footer-col {
-        flex: 1;
-    }
-
-    & .footer-img-div {
-        width: 60%;
-        margin: 7% auto 0 auto;
-
-    }
-
-    & strong {
-        font-size: 2rem;
-        padding: 0 0 0 10%;
-    }
-
-    & ul {
-        padding: 0 0 0 10%;
-        margin: 0;
-        margin-top: 5%;
-        list-style: none;
-
-        li {
-            margin: 2% 0;
-
-            a {
-                color: var(--textColor);
-                font-size: 1.2rem;
-
-                &:hover {
-                    color: var(--bodyColor);
-                }
-            }
-        }
-    }
-
+}
+footer .footer-row {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 
 }
 
+footer .footer-col {
+    flex: 1;
+}
 
+footer .footer-img-div {
+    width: 60%;
+    margin: 7% auto 0 auto;
+
+}
+
+footer strong {
+    font-size: 2rem;
+    padding: 0 0 0 10%;
+}
+
+footer ul {
+    padding: 0 0 0 10%;
+    margin: 0;
+    margin-top: 5%;
+    list-style: none;
+
+    
+}
+footer ul li {
+    margin: 2% 0;
+}
+footer ul li a {
+    color: var(--textColor);
+    font-size: 1.2rem;   
+}
+footer ul li a:hover {
+    color: var(--bodyColor);
+}
 
 /* CSS */
 .faq {
@@ -320,9 +308,10 @@ footer {
     .footer-row {
         flex-wrap: wrap;
 
-        & .footer-col {
-            flex: 50%;
-        }
+        
+    }
+    .footer-row .footer-col {
+        flex: 50%;
     }
 }
 
@@ -360,26 +349,24 @@ footer {
     }
 
     .service-information {
-        height: auto;
+        height: auto;        
+    }
+    .service-information .service-info-row {
+        flex-wrap: wrap;
+    }
 
-        & .service-info-row {
-            flex-wrap: wrap;
-        }
-
-        .service-info-col {
-            width: 100%;
-            border-bottom: 1px solid white;
-        }
+    .service-information .service-info-col {
+        width: 100%;
+        border-bottom: 1px solid white;
     }
 
     .footer-row {
-        flex-wrap: wrap;
-
-        & .footer-col {
-            flex: 100%;
-            margin: 2% 0;
-            text-align: center;
-        }
+        flex-wrap: wrap;        
+    }
+    .footer-row .footer-col {
+        flex: 100%;
+        margin: 2% 0;
+        text-align: center;
     }
 
 }
