--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,4 +1,3 @@
-
 * {
     box-sizing: border-box;
 }
@@ -26,6 +25,7 @@ header {
     background-color: var(--headerColor);
     display: none;
 }
+
 .main-heading {
     font-size: 2.5rem;
     font-weight: 900;
@@ -135,6 +135,7 @@ nav ul li:hover {
     background-color: #f2cb30;
     color: black;
 }
+
 .content-container {
     width: 100%;
     height: auto;
@@ -143,24 +144,30 @@ nav ul li:hover {
 }
 
 /* Header Responsive */
-@media screen and (max-width:600px) {.image-h{
-    height: 300px;
-}}
-@media screen and (max-width:500px) {
-    .image-h{
-        height: 200px;
+@media screen and (max-width:600px) {
+    .image-h {
+        height: 300px;
     }
-    nav{
-        height: auto;
-        ul{
-            flex-direction: column;
-            li{
-                width: 100%;
-                border-bottom: 1px solid white;
-            }
-        }
-    }
-    
 }
 
+@media screen and (max-width:500px) {
+    .image-h {
+        height: 200px;
+    }
 
+    nav {
+        height: auto;
+
+    }
+
+    nav ul {
+        flex-direction: column;
+
+    }
+
+    nav ul li {
+        width: 100%;
+        border-bottom: 1px solid white;
+    }
+
+}
