--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,325 +1,1 @@
-/* Header Color #F8721B */
-/* Navbar Color #EF0000 */
-/* text Color #FEFFFF */
-/* Body Color #F2CB30 */
-.container {
-    width: 85%;
-    height: 100%;
-    background-color: var(--textColor);
-    margin: auto;
-    border-radius: 0 0 80px 80px;
-    padding: 1% 3%;
-    box-shadow: 0 0 12px 3px white;
-    border: 1px solid rgb(239, 239, 239);
-}
-.second-heading {
-    font-size: 2rem;
-    font-weight: 700;
-    color: #F8721B;
-}
-.container p {
-    font-size: 1.2rem;
-    line-height: 25px;
-    font-weight: 500;
-}
-.container a {
-    font-weight: bolder;
-}
-.category-of-escorts-row {
-    width: 100%;
-    height: auto;
-    margin: 1.5% 0;
-    display: flex;
-    justify-content: center;
-    gap: 2%;
-}
-.category-of-escorts-col {
-    flex: 1;
-}
-.category-card {
-    width: 100%;
-    height: auto;
-    background-color: rgb(238, 238, 238);
-    padding: 1.5%;
-}
-.category-row {
-    width: 100%;
-    height: auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; 
-}
-.category-img {
-    width: 30%;
-    height: 150px;
-    background-color: lightgrey;
-}
-.category-detail {
-    width: 70%;
-    padding: 1.5% 1%;
-    height: 160px;
-}
-.category-detail p {
-    padding: 0;
-    margin: 2% 0;
-}
-.category-detail strong {
-    font-size: 1.4rem;
-}
-.category-detail button {
-    width: 100px;
-    height: 35px;
-    border-radius: 5px;
-    border: 0;
-    background-color: var(--navbarColor);
-    color: white;
-    cursor: pointer;
-}
-.container ul {
-    padding: 0;
-    margin: 0 2%;
-}
-.container ul li {
-    font-size: 1.2rem;
-    margin: .5% 0;
-}
-.long-profile-section {
-    width: 100%;
-    height: auto;
-    padding: 2% 1%;
-}
-.long-profile-card {
-    width: 100%;
-    height: auto;
-    margin: 2% 0;
-    display: flex;
-    border: 1px solid lightgrey;
-    position: relative;
-    border-radius: 10px;
-    box-shadow: 0 0 12px 5px rgb(157, 157, 157);
-}
-.add,.top-add{
-    position: absolute;
-    top: -6%;
-    border-radius: 10px;
-    right: 3%;
-    width: 50px;
-    display: grid;
-    place-items: center;
-    color: white;
-    font-weight: bold;
-    height: 25px;
-    background-color: var(--navbarColor);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: small;
-    user-select: none;
-}
-.top-add{
-    width: 100px;
-    height: 25px;
-}
-.top-add svg, .add svg{
-    transform: rotateX(180deg) rotate(-90deg);
-}
-.long-profile-img {
-    width: 17.5%;
-    height: 220px;
-    background-color: lightgrey;
-}
-.long-profile-detail {
-    width: 82.5%;
-    height: 220px;
-    padding: 2%;
-}
-.long-profile-detail strong {
-    font-size: 1.7rem;
-}
-.long-profile-detail p{
-    margin: 1.5% 0;
-    padding: 0;
-}
-
-.long-profile-action{
-    width: 100%;
-    height: a;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.long-profile-action div{width: 50%;}
-.long-profile-action button{
-    /* width: 100px; */
-    height: 40px;
-    padding: 0 2%;
-    margin:0 1%;
-    float: right;
-    border: 0;
-    border-radius: 5px;
-    cursor: pointer;
-    font-weight: bold;
-    display: flex;
-    align-items: center;
-    /* gap: 2%; */
-}
-.long-profile-action .whatsapp-btn{
-    background-color: green;
-    color: white;
-}
-.long-profile-action .call-btn{
-    border: 1px solid var(--navbarColor);
-    background-color: transparent;
-    color: var(--navbarColor);
-}
-.long-profile-action .whatsapp-btn:hover{
-    background-color: rgb(0, 92, 0);}
-.long-profile-action .call-btn:hover{ background-color: var(--navbarColor);color: white;}
-
-
-
-
-@media screen and (max-width:770px) {
-    .container {
-        width: 98%;
-    }
-
-    .category-img {
-        width: 40%;
-        height: auto;
-        background: 0;
-        overflow: hidden;
-    }
-
-    .category-img img {
-        width: 100%;
-        object-fit: cover;
-    }
-
-    .category-detail {
-        width: 60%;
-        height: auto;
-    }
-
-    .long-profile-card .long-profile-img {
-        width: 30%;
-        height: auto;
-    }
-
-    .long-profile-card .long-profile-detail {
-        width: 70%;
-        height: auto;
-    }
-}
-
-@media screen and (max-width:700px) {
-    .category-card {
-        margin: 1% 0;
-    }
-
-    .category-of-escorts-row {
-        flex-wrap: wrap;
-    }
-
-    .category-of-escorts-col {
-        flex: 100%;
-    }
-
-    .category-img {
-        width: 40%;
-        height: 170px;
-        overflow: hidden;
-    }
-
-    .category-img img {
-        width: 100%;
-
-    }
-
-    .category-detail {
-        width: 60%;
-        height: 170px;
-    }
-
-    .long-profile-card .long-profile-img {
-        width: 40%;
-        height: auto;
-    }
-
-    .long-profile-card .long-profile-detail {
-        width: 60%;
-        height: auto;
-    }
-    .add,.top-add{top:1%}
-    .long-profile-action{flex-wrap: wrap;margin: 2% 0;}
-    .long-profile-action div{width:100%;margin-top: 2%;}
-    .long-profile-action button{float: left;}
-
-}
-
-@media screen and (max-width:500px) {
-    .category-img {
-        width: 60%;
-        height: 140px
-    }
-    .category-detail button{
-        display: none;
-    }
-
-    .category-img img {
-        width: 100%;
-        height: 100%;
-    }
-
-    .category-detail {
-        width: 100%;
-        padding: 5% 1%;
-        height: auto;
-    }
-
-    .container {
-        width: 98% !important;
-        border-radius: 0;
-    }
-
-    .long-profile-card {
-        flex-wrap: wrap;
-    }
-
-    .long-profile-card .long-profile-img {
-        width: 100%;
-    }
-
-    .long-profile-card .long-profile-detail {
-        width: 100%;
-        height: auto;
-    }
-    .add,.top-add{top:1%}
-    .long-profile-action{flex-wrap: wrap;margin: 2% 0;}
-    .long-profile-action div{width:100%;margin-top: 2%;}
-    .long-profile-action button{float: left;}
-}
-
-@media screen and (max-width:400px) {
-    .category-row {
-        flex-direction: column;
-    }
-
-    .category-img {
-        width: 100%;
-        height: 165px;
-    }
-
-    .category-img img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        object-position: top;
-    }
-
-    .category-detail {
-        width: 100%;
-        padding: 5% 1%;
-        height: auto;
-    }
-}
+.container{width:85%;height:100%;background-color:var(--textColor);margin:auto;border-radius:0 0 80px 80px;padding:1% 3%;box-shadow:0 0 12px 3px #fff;border:1px solid #efefef}.second-heading{font-size:2rem;font-weight:700;color:#f8721b}.container p{font-size:1.2rem;line-height:25px;font-weight:500}.container a{font-weight:bolder}.category-of-escorts-row{width:100%;height:auto;margin:1.5% 0;display:flex;justify-content:center;gap:2%}.category-of-escorts-col{flex:1}.category-card{width:100%;height:auto;background-color:#eee;padding:1.5%}.category-row{width:100%;height:auto;display:flex;align-items:center;justify-content:space-between}.category-img{width:30%;height:150px;background-color:#d3d3d3}.add,.category-detail button,.top-add{background-color:var(--navbarColor);color:#fff}.category-detail{width:70%;padding:1.5% 1%;height:160px}.category-detail p{padding:0;margin:2% 0}.category-detail strong{font-size:1.4rem}.category-detail button{width:100px;height:35px;border-radius:5px;border:0;cursor:pointer}.container ul{padding:0;margin:0 2%}.container ul li{font-size:1.2rem;margin:.5% 0}.long-profile-section{width:100%;height:auto;padding:2% 1%}.long-profile-card{width:100%;height:auto;margin:2% 0;display:flex;border:1px solid #d3d3d3;position:relative;border-radius:10px;box-shadow:0 0 12px 5px #9d9d9d}.add,.top-add{position:absolute;top:-6%;border-radius:10px;right:3%;width:50px;display:grid;place-items:center;font-weight:700;height:25px;display:flex;align-items:center;justify-content:center;font-size:small;user-select:none}.top-add{width:100px;height:25px}.add svg,.top-add svg{transform:rotateX(180deg) rotate(-90deg)}.long-profile-img{width:17.5%;height:220px;background-color:#d3d3d3}.long-profile-detail{width:82.5%;height:220px;padding:2%}.long-profile-detail strong{font-size:1.7rem}.long-profile-detail p{margin:1.5% 0;padding:0}.long-profile-action{width:100%;height:a;display:flex;justify-content:space-between;align-items:center}.long-profile-action div{width:50%}.long-profile-action button{height:40px;padding:0 2%;margin:0 1%;float:right;border:0;border-radius:5px;cursor:pointer;font-weight:700;display:flex;align-items:center}.long-profile-action .whatsapp-btn{background-color:green;color:#fff}.long-profile-action .call-btn{border:1px solid var(--navbarColor);background-color:transparent;color:var(--navbarColor)}.long-profile-action .whatsapp-btn:hover{background-color:#005c00}.long-profile-action .call-btn:hover{background-color:var(--navbarColor);color:#fff}@media screen and (max-width:770px){.container{width:98%}.category-img{width:40%;height:auto;background:0;overflow:hidden}.category-img img{width:100%;object-fit:cover}.category-detail{width:60%;height:auto}.long-profile-card .long-profile-img{width:30%;height:auto}.long-profile-card .long-profile-detail{width:70%;height:auto}}@media screen and (max-width:700px){.category-card{margin:1% 0}.category-of-escorts-row{flex-wrap:wrap}.category-of-escorts-col{flex:100%}.category-img{width:40%;height:170px;overflow:hidden}.category-img img{width:100%}.category-detail{width:60%;height:170px}.long-profile-card .long-profile-img{width:40%;height:auto}.long-profile-card .long-profile-detail{width:60%;height:auto}.add,.top-add{top:1%}.long-profile-action{flex-wrap:wrap;margin:2% 0}.long-profile-action div{width:100%;margin-top:2%}.long-profile-action button{float:left}}@media screen and (max-width:500px){.category-img{width:60%;height:140px}.category-detail,.long-profile-card .long-profile-detail{height:auto;width:100%}.category-detail button{display:none}.category-img img{width:100%;height:100%}.category-detail{padding:5% 1%}.container{width:98%!important;border-radius:0}.long-profile-card{flex-wrap:wrap}.long-profile-card .long-profile-img{width:100%}.add,.top-add{top:1%}.long-profile-action{flex-wrap:wrap;margin:2% 0}.long-profile-action div{width:100%;margin-top:2%}.long-profile-action button{float:left}}@media screen and (max-width:400px){.category-row{flex-direction:column}.category-img{width:100%;height:165px}.category-img img{width:100%;height:100%;object-fit:cover;object-position:top}.category-detail{width:100%;padding:5% 1%;height:auto}}
